# stm32-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Core/Src/: main.c
cmake/: arm-gcc-toolchain.cmake
linker/: stm32f411.ld
startup/: startup_stm32f411.s
